cambios de estructura para pruebas de host

--- a/elementos/index.html
+++ b/elementos/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda para perritos</title>
+    <link rel="stylesheet" href="css.css">
+    <title>Liga Santandereana de Trauma</title>
 </head>
 <body>
-   <header>
+   <header class="header">
     <h1>Tienda para perritos</h1>
     <p>La mejor inversion para tu peludo</p>
     <p>¡Esta tienda está diseñada para alimentar la felicidad de cada uno de los perritos de bucaramanga y el área metropolitana!<br>Contigo podremos hacer realidad el sueño de disfrutar con nuestros mejores amigos</p>
-    <img src="1366_2000.jpeg" alt="Este es el perrito negrito">
+    <img class="perrito" src="1366_2000.jpeg" alt="Este es el perrito negrito">
    </header> 
 
    <section>
