cambio en css y en index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="scroll_pdf">
-        <iframe src="src/cronograma_congreso_2022_Final.pdf" title="Cronograma del Congreso" height="1400" width="100%"> </iframe>
+        <iframe src="src/cronograma_congreso_2022_Final.pdf" title="Cronograma del Congreso"> </iframe>
     </div>
 </body>
 </html>
