cambios a responsive design

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>XXVIII Congreso de residentes de pediatria</title>
 </head>
 <body>
-    <div class="scroll_pdf">
-        <iframe src="src/cronograma_congreso_2022_Final.pdf" title="Cronograma del Congreso"> </iframe>
+    <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+        <div class="responsive-wrapper 
+        responsive-wrapper-wxh-572x612"
+        style="-webkit-overflow-scrolling: touch; overflow: auto;">
+            <iframe src="src/cronograma_congreso_2022_Final.pdf" title="Cronograma del Congreso"> </iframe>
+        </div>
     </div>
 </body>
 </html>
