--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>XXVIII Congreso de residentes de pediatria</title>
 </head>
 <body>
-    <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
-        <div class="responsive-wrapper 
-        responsive-wrapper-wxh-572x612"
-        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-            <iframe src="src/cronograma_congreso_2022_Final.pdf" title="Cronograma del Congreso"> </iframe>
+    <div class="carrete">
+        <div class="contenedor_imagenes">
+            <img src="src/0001.jpg" alt="programacion dia 1">
+            <img src="src/0002.jpg" alt="programacion dia 1">
+            <img src="src/0003.jpg" alt="programacion dia 1">
+            <img src="src/0004.jpg" alt="programacion dia 1">
         </div>
     </div>
 </body>
