cambios ajustes moviles

--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <title>XXVIII Congreso de residentes de pediatria</title>
 </head>
 <body>
-    <div class="carrete">
-        <div class="contenedor_imagenes">
-            <img src="src/0001.jpg" alt="programacion dia 1">
-            <img src="src/0002.jpg" alt="programacion dia 1">
-            <img src="src/0003.jpg" alt="programacion dia 1">
-            <img src="src/0004.jpg" alt="programacion dia 1">
+    <div class="galeria">
+        <div class="item_galeria">
+            <figure class="imagen_galeria"><img src="src/0001.jpg" alt="programacion dia 1 morning"></figure>
+            <figcaption>Jueves 22</figcaption>
+        </div>
+        <div class="item_galeria">
+            <figure class="imagen_galeria"><img src="src/0002.jpg" alt="programacion dia 1 tarde"></figure>
+            <figcaption>Jueves 22</figcaption>
+        </div>
+        <div class="item_galeria">
+            <figure class="imagen_galeria"><img src="src/0003.jpg" alt="programacion dia 2 morning"></figure>
+            <figcaption>Viernes 23</figcaption>
+        </div>
+        <div class="item_galeria">
+            <figure class="imagen_galeria"><img src="src/0004.jpg" alt="programacion dia 2 tarde"></figure>
+            <figcaption>Viernes 23</figcaption>
         </div>
     </div>
 </body>
