cambio de css al css2

--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css1.css">
+    <link rel="stylesheet" href="src/css2.css">
     <title>XXVIII Congreso de residentes de pediatria</title>
 </head>
 <body>
     <div class="galeria">
         <div class="item_galeria">
-            <figure class="imagen_galeria"><img src="src/0001.jpg" alt="programacion dia 1 morning"></figure>
-
+            <div class="imagen_galeria">
+                <img src="src/0001.jpg" alt="programacion dia 1 morning">
+            </div>
         </div>
         <div class="item_galeria">
-            <figure class="imagen_galeria"><img src="src/0002.jpg" alt="programacion dia 1 tarde"></figure>
+            <div class="imagen_galeria"><img src="src/0002.jpg" alt="programacion dia 1 tarde">
+            </div>
         </div>
         <div class="item_galeria">
-            <figure class="imagen_galeria"><img src="src/0003.jpg" alt="programacion dia 2 morning"></figure>
+            <div class="imagen_galeria"><img src="src/0003.jpg" alt="programacion dia 2 morning">
+            </div>
         </div>
         <div class="item_galeria">
-            <figure class="imagen_galeria"><img src="src/0004.jpg" alt="programacion dia 2 tarde"></figure>
+            <div class="imagen_galeria"><img src="src/0004.jpg" alt="programacion dia 2 tarde">
+            </div>
         </div>
     </div>
 </body>
